<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_resultados"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.app.wilde.sebastian.nutrihelp.Resultados">
    <TextView
        android:text="Resultados"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView19" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/sum6pli"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/sum6pli"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mgrasacarter"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView22"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mgrasacarter"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mresidual"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView23"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mresidual"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mgrasakg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mgrasakg"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mmuscularkg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView22"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mmuscularkg"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mmuscular"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView23"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mmuscular"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mresidualkg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView21"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mresidualkg"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/moseakg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView22"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/moseakg"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/mosea"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/textView23"
            android:layout_weight="1" />

        <TextView
            android:text=""
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/mosea"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
