<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.app.wilde.sebastian.nutrihelp.MainActivity">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Ingresa los datos amigo nutricionista:" />


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="261dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/peso"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/peso"
                    tools:gravity="center"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/talla"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView2" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/talla"
                    android:hint="@string/S0"
                    android:gravity="center" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/brazore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView3" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/brazoRelajado"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/brazofle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView4" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/brazoFlexionado"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/cintura"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView5" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/cintura"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/caderaMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView6" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/caderaMax"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/pantorrillaMax"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView7" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/pantorrillaMax"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/triceps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView8" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/triceps"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/subescapular"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView9" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/subescapular"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/biceps"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView10" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/biceps"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/crestalliaca"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView11" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/crestalliaca"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/supraespinal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView12" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/supraespinal"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/abdominal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView13" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/abdominal"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/muslofron"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView14" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/muslofron"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/pantorrilla"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView15" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/pantorrilla"
                    android:hint="@string/S0"
                    android:gravity="center" />
                <TextView
                    android:text="@string/humeral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView16" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/humeral"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:text="@string/femoral"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView17" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/femoral"
                    android:hint="@string/S0"
                    android:gravity="center" />

                <TextView
                    android:text="@string/dm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:id="@+id/textView18" />
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="number|numberDecimal"
                    android:ems="5"
                    android:layout_weight="1"
                    android:id="@+id/dm"
                    android:hint="@string/S0"
                    android:gravity="center" />

            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:text="Hombre"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbHombre"
            android:checked="true" />

        <RadioButton
            android:text="Mujer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/rbMujer" />
    </RadioGroup>
    <Button
        android:text="Calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calcular" />
    <Button
        android:text="Limpiar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/limpiar" />

</LinearLayout>
